--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
+    "better-react-mathjax": "^2.0.3",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -53,15 +54,18 @@
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.8",
     "react-hook-form": "^7.47.0",
+    "react-latex-next": "^3.0.0",
     "react-medium-image-zoom": "^5.2.9",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.16.0",
+    "react-tag-input-component": "^2.0.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "unplugin-fonts": "^1.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/katex": "^0.16.7",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
